Fix ineffective styling that meant the Fork Me ribbon was showing with link border on IE

--- a/css/home.css
+++ b/css/home.css
@@ -152,7 +152,7 @@ td a:hover {
  transition:all 1.0s ease-in-out;
 }
 
-#git img:a {
+#git img {
     border:none;
 }
 
@@ -1087,8 +1087,8 @@ only screen and (   min--moz-device-pixel-ratio: 2),
 only screen and (     -o-min-device-pixel-ratio: 2/1),
 only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) { 
-    
+only screen and (                min-resolution: 2dppx) {
+
     #bookmarklet-feature {
         background: url(../images/bookmarklet-feature@2x.png) 72px 30px no-repeat;
         background-size: 318px 307px;
